--- a/server/.env
+++ b/server/.env
@@ -1,14 +1,14 @@
 PORT=5001
 
-MONGO_URI=mongodb+srv://probindhakal04:pIryj7tinBjaKIqt@cluster0.locx8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=
 
 
-JWT_SECRET=FHJGSIFYGEIWYAFHJV836R7TYEG2E7463877864937trwue
+JWT_SECRET=
 
 
-EMAIL_USER=probindhakal5@gmail.com
-EMAIL_PASS=whieyhynbmdcmhfr
+EMAIL_USER=
+EMAIL_PASS=
 
 
 
-GEMINI_API_KEY=AIzaSyBbqvhcEK0datDi9SGm994PJAUK7MnL3Vw
+GEMINI_API_KEY=
